# scraper

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  service.nix
.github/workflows/: cargo_test.yml  update_inputs.yml
src/: camo.rs  main.rs  scraper.rs  web.rs
src/scraper/: buzzly.rs  deviantart.rs  nitter.rs  philomena.rs  raw.rs  tumblr.rs  twitter.rs  twitterv2.rs
src/scraper/philomena/: derpibooru.rs
