[package]
name = "scraper"
version = "0.1.5"
authors = ["Cult Pony"]
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
axum-extra = { version = "0.3", features = ["typed-routing"] }
axum = "0.5"
moka = { version = "0.9", features = ["future"] }
anyhow = "1.0"
better-panic = "0.3"
camo-url = "0.1"
dns-lookup = "1.0"
envconfig = "0.10"
hex = "0.4"
ipnet = "2.5"
itertools = "0.10.5"
kankyo = "0.3"
lazy_static = "1.4"
radix_fmt = "1.0"
regex = "1"
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
securefmt = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
url = { version = "2.3", features = ["serde"] }
url_serde = "0.2"
visdom = "0.5.6"
graphql_client = "0.11"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
sentry = { version = "0.27.0", features = ["tracing", "anyhow"] }
sentry-tower = { version = "0.27.0", features = ["http"] }
futures = "0.3.25"
reqwest-middleware = "0.1.1"
reqwest-tracing = "0.3"
twitter-v2 = "0.1.7"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8.5"
test-log = "0.2.10"
env_logger = "*"

[build-dependencies]
anyhow = "1.0"
vergen = "7.4.2"

[profile.release]
opt-level = 3
lto = true