[package]
name = "scraper"
version = "0.1.6"
authors = ["Cult Pony"]
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
axum-extra = { version = "0.7", features = ["typed-routing"] }
axum = "0.5"
moka = { version = "0.11", features = ["future"] }
anyhow = "1.0"
better-panic = "0.3"
camo-url = "0.1"
dns-lookup = "2.0"
envconfig = "0.10"
hex = "0.4"
ipnet = "2.8"
itertools = "0.10"
kankyo = "0.3"
lazy_static = "1.4"
radix_fmt = "1.0"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "socks", "cookies", "rustls-tls"] }
securefmt = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
url = { version = "2.3", features = ["serde"] }
url_serde = "0.2"
visdom = "0.5"
graphql_client = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
sentry = { version = "0.31", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "tracing", "anyhow", "rustls", "reqwest" ] }
sentry-tower = { version = "0.31", features = ["http"] }
futures = "0.3.25"
reqwest-middleware = "0.1.1"
reqwest-tracing = "0.3"
twitter-v2 = { version = "0.1", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8.5"
test-log = "0.2.12"
env_logger = "*"

[profile.release]
opt-level = 3
lto = true

[features]
default = [ "net-tests" ]
# If not enabled, any tests requiring the network are skipped
net-tests = []