[package]
name = "scraper"
version = "0.1.7"
authors = ["Cult Pony"]
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-routing"] }
better-panic = "0.3"
camo-url = "0.1"
dns-lookup = "2.0"
envconfig = "0.10"
futures = "0.3.30"
graphql_client = "0.13"
hex = "0.4"
ipnet = "2.9"
itertools = "0.12"
kankyo = "0.3"
lazy_static = "1.4"
moka = { version = "0.12", features = ["future"] }
radix_fmt = "1.0"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "socks", "cookies", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-tracing = "0.4"
securefmt = "0.1"
sentry = { version = "0.32", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "tracing", "anyhow", "rustls", "reqwest" ] }
sentry-tower = { version = "0.32", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twitter-v2 = { version = "0.1", default-features = false, features = ["rustls-tls"] }
url = { version = "2.5", features = ["serde"] }
url_serde = "0.2"
visdom = "1.0"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8.5"
test-log = "0.2.15"
env_logger = "*"

[profile.release]
opt-level = 3
lto = true

[features]
default = [ "net-tests" ]
# If not enabled, any tests requiring the network are skipped
net-tests = []
